...
                                                                    <constraint firstAttribute="height" constant="20" id="dED-2D-EAN"/>
                                                                </constraints>
                                                            </view>
                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WAB-js-YOY">
                                                                <rect key="frame" x="0.0" y="211" width="375" height="50"/>
                                                                <subviews>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Support" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FVB-Ef-T18">
                                                                        <rect key="frame" x="20" y="14.5" width="335" height="21"/>
                                                                        <constraints>
                                                                            <constraint firstAttribute="height" constant="21" id="Chs-KM-X1S"/>
                                                                        </constraints>
                                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                                        <nil key="textColor"/>
...
                                                <rect key="frame" x="15" y="0.0" width="345" height="50"/>
                                                <color key="backgroundColor" name="ButtonColor"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="Djw-yi-hci"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                <state key="normal" title="Logout"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                        <integer key="value" value="25"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
...
            <point key="canvasLocation" x="-121" y="173"/>
        </scene>
        <!--Settings-->
        <scene sceneID="OM8-pl-chb">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="O5A-Rf-2ya" customClass="NavController" customModule="TYST" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="setting_normal" id="Fj1-oz-jBa"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="tGp-ix-KXE">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" name="AppColor"/>
...
