...
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAf-cc-J0o">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="il4-br-Oij">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="585"/>
                                        <subviews>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Y2Z-nO-1ex">
                                                <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="120" id="MsH-Nn-L9I"/>
                                                </constraints>
                                                <userDefinedRuntimeAttributes>
...
                                                <rect key="frame" x="20" y="515" width="335" height="50"/>
                                                <color key="backgroundColor" name="ButtonColor"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="ne4-Lp-wtW"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                <state key="normal" title="Send">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                        <real key="value" value="25"/>
                                                    </userDefinedRuntimeAttribute>
...
